@@ -5,7 +5,7 @@
 ##
 ## This file is part of the Score-P software (http://www.score-p.org)
 ##
-## Copyright (c) 2013-2014, 2020, 2022,
+## Copyright (c) 2013-2014, 2020, 2022, 2024,
 ## Forschungszentrum Juelich GmbH, Germany
 ##
 ## Copyright (c) 2014, 2016, 2019, 2021,
@@ -253,8 +253,8 @@ done
 # Ugly, but "omp" is called "opari2_openmp" nowadays
 if test "${THREAD}" = "omp"; then
 @HAVE_SCOREP_OMPT_SUPPORT_TRUE@    if test "${THREAD_VARIANT}" = ""; then
-@HAVE_SCOREP_OMPT_SUPPORT_TRUE@@HAVE_SCOREP_DEFAULT_OMPT_TRUE@        THREAD=ompt
-@HAVE_SCOREP_OMPT_SUPPORT_TRUE@@HAVE_SCOREP_DEFAULT_OMPT_FALSE@        THREAD=opari2_openmp
+@HAVE_SCOREP_OMPT_SUPPORT_TRUE@@HAVE_SCOREP_DEFAULT_OPARI2_TRUE@        THREAD=opari2_openmp
+@HAVE_SCOREP_OMPT_SUPPORT_TRUE@@HAVE_SCOREP_DEFAULT_OPARI2_FALSE@        THREAD=ompt
 @HAVE_SCOREP_OMPT_SUPPORT_TRUE@    elif test "${THREAD_VARIANT}" = "ompt"; then
 @HAVE_SCOREP_OMPT_SUPPORT_TRUE@        THREAD=ompt
 @HAVE_SCOREP_OMPT_SUPPORT_TRUE@    else
